k8s/gateways/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateways-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
spec:
  ingressClassName: nginx
  rules:
    - host: staging-gw-k3s.gostoa.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stoa-gateway
                port:
                  number: 8080
    - host: staging-wm-k3s.gostoa.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stoa-link-wm
                port:
                  number: 8080
